objects/Flosum__Patch_Application__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Deployment_Log__c</fullName>
        <label>Deployment Log</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Deployment_URL__c</fullName>
        <label>Deployment URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Flosum__Org__c</fullName>
        <label>Org</label>
        <referenceTo>Flosum__Organisation__c</referenceTo>
        <relationshipName>Patch_Application</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Flosum__Patch_Name__c</fullName>
        <formula>Flosum__Patch__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patch Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Patch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patch</label>
        <referenceTo>Flosum__Patch__c</referenceTo>
        <relationshipName>Patch_Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Snapshot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Snapshot</label>
        <referenceTo>Flosum__Snapshot__c</referenceTo>
        <relationshipName>Patch_Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Patch_Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Deployment</label>
    <nameField>
        <displayFormat>DP-{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Deployment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>